tests/NormalTests/paczka2/big_fuzzy/46649275.err
Error in line 14: SvyT S219 0,1
Error in line 24: A64 A568 93,5
Error in line 26: SvyT A568 32,8
Error in line 42: sdh S610 67,2
Error in line 40: A64 A568 18,9
Error in line 46: gL6aTY6 S219 9,6
Error in line 49: A64 S610 72,9
Error in line 57: uIaOnY1oR S219 27=4
Error in line 56: A64 S219 84,6
Error in line 52: uIaOnY1oR S610 72,5
Error in line 79: A64 S219 65,7
Error in line 80: gL6aTY6 S610 40,9
Error in line 84: gL6aTY6 A568 89,2
Error in line 92: SvyT A568 0,2
Error in line 101: SvyT A64 71,2
Error in line 106: SvyT A568 28,2
Error in line 111: gL6aTY6 S610 17,8
Error in line 108: NzIZh S610 26,2
Error in line 95: uIaOnY1oR S610 88,7
Error in line 113: NzIZh A568 11,5
Error in line 125: uIaOnY1oR A568 16,7
Error in line 151: A64 S6 0  6,2
Error in line 137: A64 S610 24,5
Error in line 152: gL6aTY6 A64 25,0
Error in line 158: A64 A64 106,1
Error in line 169: A64 S610 12,5
Error in line 170: A64 A568 58,8
Error in line 162: uIaOnY1oR A568 17,6
Error in line 148: NzIZh S610 30,1
Error in line 180: T54l52rm A568 30,9
Error in line 173: uIaOnY1oR S219 89,3
Error in line 163: gL6aTY6 S610 30,9
Error in line 196: gL6aTY6 SO19 165,5
Error in line 207: SvyT Sq10 75,0
Error in line 211: gL6aTY6 S219 143,1
Error in line 222: gL6aTY6 A6 58,2
Error in line 217: A64 S219 54,8
Error in line 230: NzIZh A568 52,3
Error in line 237: SvyT S610 99,53
Error in line 242: NzIZh S219 94,8
Error in line 203: uIaOnY1oR A568 268,2
Error in line 250: A64 S610 -2,0
